--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="container">
   <div class="jumbotron">
   <h1 class="display-3">Welcome To My Place</h1>
-  <p class="lead">আমি কে, আমি কি করি বা আমার বয়স কত এগুলো মনে হয় আপাত দৃষ্টিতে অপ্রাগঙ্গিক।</p>
+  <p class="lead">আমি কে, কি করি বা আমার বয়স কত এগুলো মনে হয় আপাত দৃষ্টিতে অপ্রাসঙ্গিক।</p>
   <hr class="my-4">
   <p> আমার যা ভালো লাগে তাই নিয়ে এই সাইট টি বানানো। আপাদত সাইটে বই-টই নিয়েই লেখালেখি করবো। সাহিত্য ভালো লাগলে মাঝে মধ্যে ঘুরে যেতে পারেন এখান থেকে।</p>
   <p class="lead">
