--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <img class="card-img-top" src="img/painting.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Painting</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">একটা ছবি হাজার টা শব্দের সমান। কবে যে সেই মিনিংফুল ছবিটা আঁকতে পারবো জানিনা।</p>
+      <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
     </div>
   </div>
   <div class="card">
