--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <img class="card-img-top" src="img/travel.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Traveling</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">ঘোরাঘুরি খুবই ভালো লাগে।</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -123,7 +123,7 @@
     <img class="card-img-top" src="img/book.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Reading</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">বই নিজের জন্যই পড়ি। পড়তে ভালো লাগে ভালো যেকোনো বই।</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
