--- a/index.html
+++ b/index.html
@@ -179,6 +179,47 @@
 
 </div>
 </div>
+	  
+<div class="container">
+  <div class="card-deck">
+  
+  <div class="card">
+    <img class="card-img-top" src="img/book/4.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">সব ফুল কোথায় গেছে? - আসমার ওসমান</h4>
+	  <p class="card-text">Rating: 4/5</p>
+      <p class="card-text">এই বইটার ধরন অনেকটা এমন যে একজন পিতা তার পুত্রের উদ্দেশ্যে কিছু উপদেশ মূলক কথা বলে গেছেন। আসলে উপদেশ বললে ভুল হবে, একটা গাইড লাইন দিয়ে গেছে বলা যেতে পারে। এটা করবা না, ওটা করবা না এমন উপদেশ না কিন্তু। এই রাস্তায় গেলে এটা হবে, ঐ রাস্তা দিয়ে গেলে ওটা হবে, পুত্র এবার তুমি নিজ গুনে নিজের পথ বেছে নেওয়া টাইপ উপদেশ। </p>
+      <a href="http://bit.ly/2hSVHGa" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+  
+    <div class="card">
+    <img class="card-img-top" src="img/book/5.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">হাবলুদের জন্য প্রোগ্রামিং - Jhankar Mahbub</h4>
+	  <p class="card-text">Rating: 5/5</p>
+      <p class="card-text">এই বইটা পড়ে আমি প্রোগ্রামার হয়ে যাইনি তবে প্রোগ্রামিং এর বেসিক কনসেপ্ট গুলো যেমনঃ variable, loop, methods এবং আরও অনেক বিষয় সম্পর্কে আমার ধারণা অনেক পরিষ্কার হয়েছে। বইয়ের লেখক কে অনেক ধন্যবাদ বাংলা ভাষায় এতো সুন্দর ও সহজ করে প্রোগ্রামিং এর বেসিক কনসেপ্ট গুলো নিয়ে লেখার জন্য।</p>
+      <a href="http://bit.ly/2zBIbSL" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+  
+      <div class="card">
+    <img class="card-img-top" src="img/book/6.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">আগুনের দিন শেষ হয় নি - কিশোর পাশা ইমন</h4>
+	  <p class="card-text">Rating: 5/5</p>
+      <p class="card-text">পাকিস্তানের বিখ্যাত চলচ্চিত্রকার এবং পূর্ব পাকিস্তানের জনপ্রিয় ঔপন্যাসিক জহির রায়হান। বাঙালি জাতির পরিচয় তছনছ করে দেওয়া সেই রাতের পর পথে নামলেন তিনি।</p>
+      <a href="http://bit.ly/2iOTHjf" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+
+</div>
+</div>
+
+
 
 <div id="music" class="container">
     <div class="card">
