--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
   </p>
 </div>
 </div>
+	  
+	    <!-- hitwebcounter Code START -->
+   
+	
+	<div align="center" class="container">
+  <a><img src="http://hitwebcounter.com/counter/counter.php?page=6812121&style=0010&nbdigits=5&type=page&initCount=0" title="Total Visitors" Alt="Visitors Counter"   border="0" > </a> <br/>
+   <a href="#" title="This Website Visits" style="font-family: Geneva, Arial, Helvetica; font-size: 9px; color: #76766B; text-decoration: none ;"><strong>This Website Visits</strong></a>
+</div>
+	
+	<!-- Hit Counter End-->
   
   <div class="container">
   <div class="card-deck">
