--- a/index.html
+++ b/index.html
@@ -189,6 +189,17 @@
 
 </div>
 </div>
+
+<!-- quote 1 -->
+
+<div class="container">
+  <blockquote class="blockquote text-center">
+  <p class="mb-0">Think before you speak. Read before you think.</p>
+  <footer class="blockquote-footer">Fran Lebowitz</footer>
+</blockquote>
+</div>
+
+<!-- quote 1 -->
 	  
 <div class="container">
   <div class="card-deck">
