--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -126,7 +127,7 @@
     <div class="card-body">
       <h4 class="card-title">Traveling</h4>
       <p class="card-text">ঘোরাঘুরি খুবই ভালো লাগে।</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
     </div>
   </div>
   <div class="card">
@@ -134,7 +135,7 @@
     <div class="card-body">
       <h4 class="card-title">Reading</h4>
       <p class="card-text">বই নিজের জন্যই পড়ি। পড়তে ভালো লাগে ভালো যেকোনো বই।</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
     </div>
   </div>
 </div>
@@ -162,7 +163,7 @@
       <h4 class="card-title">সাক্ষী ছিলো শিরস্ত্রাণ - Shuhan Rizwan</h4>
       <p class="card-text">স্বাধীনতা যুদ্ধের অত্যন্ত গুরুত্বপূর্ণ একটা সময় অর্থাৎ ১৯৭১ সালের ২৫ শে মার্চের পরে রাজনৈতিকভাবে বাংলাদেশকে যারা নেতৃত্ব দিয়েছেন তার মধ্যে অন্যতম একজন ছিলেন তাজউদ্দীন আহমদ।</p>
       <a href="http://bit.ly/2Ab4ICL" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	  <p class="card-text"><small class="text-muted">Last updated 2017</small></p>
     </div>
   </div>
   
@@ -172,7 +173,7 @@
       <h4 class="card-title">হাজার চুরাশির মা - Mahasweta Devi</h4>
       <p class="card-text">নকশাল আন্দোলন হচ্ছে ১৯৭০ দশকের পশ্চিমবঙ্গের একটি কমিউনিস্ট আন্দোলনের নাম। সমাজ ব্যবস্থা ভেঙ্গে ধনী আরও ধনী হচ্ছিলো, গরীব আরও গরিবতর।</p>
       <a href="http://bit.ly/2Ab4ICL" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	  <p class="card-text"><small class="text-muted">Last updated 2017</small></p>
     </div>
   </div>
   
@@ -183,7 +184,7 @@
       <p class="card-text">তারা খয়েরি রঙের এক ধরনের জামা পরে, বিভিন্ন উৎসবের দিন ফানুস উড়ায়। এই তো, বৌদ্ধ ধর্ম সম্পর্কে জ্ঞান আমার টুকটাক এটুকুই ছিল। এই ধর্মটা সম্পর্কে কখনো জানতে ইচ্ছা হয়নি আর বাংলায় তেমন ভালো বইও ছিল না। তো একদিন হঠাৎ জানতে পারলাম এই বইটার সম্পর্কে।
 </p>
       <a href="http://bit.ly/2iOTHjf" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	  <p class="card-text"><small class="text-muted">Last updated 2017</small></p>
     </div>
   </div>
 
@@ -298,7 +299,7 @@
     <p class="card-text">কেয়ার টেকার পূরণ জয় তনচংজ্ঞা-০১৫৫২৮৬০৭৬২"</p>
     <p class="card-text">ছবি : ইন্টারনেট</p>
 	
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <p class="card-text"><small class="text-muted">Last updated  November,2017</small></p>
   </div>
 </div>
 
