--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" href="img/icon/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -95,11 +96,26 @@
   <p class="lead">আমি কে, কি করি বা আমার বয়স কত এগুলো মনে হয় আপাত দৃষ্টিতে অপ্রাসঙ্গিক।</p>
   <hr class="my-4">
   <p> আমার যা ভালো লাগে তাই নিয়ে এই সাইট টি বানানো। আপাদত সাইটে বই-টই নিয়েই লেখালেখি করবো। সাহিত্য ভালো লাগলে মাঝে মধ্যে ঘুরে যেতে পারেন এখান থেকে।</p>
+  <br/>
+  <br/>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" target="_new" href="https://www.facebook.com/deathwish2night" role="button">Learn more</a>
+    <a target="_new" title="Facebook" href="https://www.facebook.com/deathwish2night"><img src="img/icon/facebook.png" alt="facebook icon"/></a>
+    <a target="_new" title="YouTube" href="https://www.youtube.com/channel/UCDWgQgbDU4MERLRURyeHm9Q"><img src="img/icon/youtube.png" alt="YouTube icon"/></a>
+    <a target="_new" title="Soundcloud" href="https://soundcloud.com/taib-islam-dipu/arnob-chai-cover"><img src="img/icon/soundcloud.png" alt="soundcloud icon"/></a>
+    <a target="_new" title="Github" href="https://github.com/Taib-islam-dipu"><img src="img/icon/github.png" alt="github icon"/></a>
   </p>
 </div>
 </div>
+	  
+	    <!-- hitwebcounter Code START -->
+   
+	
+	<div align="center" class="container">
+  <a><img src="http://hitwebcounter.com/counter/counter.php?page=6812121&style=0010&nbdigits=5&type=page&initCount=0" title="Total Visitors" Alt="Visitors Counter"   border="0" > </a> <br/>
+   <a href="#" title="This Website Visits" style="font-family: Geneva, Arial, Helvetica; font-size: 9px; color: #76766B; text-decoration: none ;"><strong>This Website Visits</strong></a>
+</div>
+	
+	<!-- Hit Counter End-->
   
   <div class="container">
   <div class="card-deck">
@@ -107,15 +123,15 @@
     <img class="card-img-top" src="img/painting.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Painting</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">একটা ছবি হাজার টা শব্দের সমান। কবে যে সেই মিনিংফুল ছবিটা আঁকতে পারবো জানিনা।</p>
+      <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="img/travel.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Traveling</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">ঘোরাঘুরি খুবই ভালো লাগে।</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -123,7 +139,7 @@
     <img class="card-img-top" src="img/book.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Reading</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">বই নিজের জন্যই পড়ি। পড়তে ভালো লাগে ভালো যেকোনো বই।</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -179,6 +195,58 @@
 
 </div>
 </div>
+
+<!-- quote 1 -->
+
+<div class="container">
+  <blockquote class="blockquote text-center">
+  <p class="mb-0">Think before you speak. Read before you think.</p>
+  <footer class="blockquote-footer">Fran Lebowitz</footer>
+</blockquote>
+</div>
+
+<!-- quote 1 -->
+	  
+<div class="container">
+  <div class="card-deck">
+  
+  <div class="card">
+    <img class="card-img-top" src="img/book/4.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">সব ফুল কোথায় গেছে? - আসমার ওসমান</h4>
+	  <p class="card-text">Rating: 4/5</p>
+      <p class="card-text">এই বইটার ধরন অনেকটা এমন যে একজন পিতা তার পুত্রের উদ্দেশ্যে কিছু উপদেশ মূলক কথা বলে গেছেন। আসলে উপদেশ বললে ভুল হবে, একটা গাইড লাইন দিয়ে গেছে বলা যেতে পারে। এটা করবা না, ওটা করবা না এমন উপদেশ না কিন্তু। এই রাস্তায় গেলে এটা হবে, ঐ রাস্তা দিয়ে গেলে ওটা হবে, পুত্র এবার তুমি নিজ গুনে নিজের পথ বেছে নেওয়া টাইপ উপদেশ। </p>
+      <a href="http://bit.ly/2hSVHGa" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+  
+    <div class="card">
+    <img class="card-img-top" src="img/book/5.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">হাবলুদের জন্য প্রোগ্রামিং - Jhankar Mahbub</h4>
+	  <p class="card-text">Rating: 5/5</p>
+      <p class="card-text">এই বইটা পড়ে আমি প্রোগ্রামার হয়ে যাইনি তবে প্রোগ্রামিং এর বেসিক কনসেপ্ট গুলো যেমনঃ variable, loop, methods এবং আরও অনেক বিষয় সম্পর্কে আমার ধারণা অনেক পরিষ্কার হয়েছে। বইয়ের লেখক কে অনেক ধন্যবাদ বাংলা ভাষায় এতো সুন্দর ও সহজ করে প্রোগ্রামিং এর বেসিক কনসেপ্ট গুলো নিয়ে লেখার জন্য।</p>
+      <a href="http://bit.ly/2zBIbSL" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+  
+      <div class="card">
+    <img class="card-img-top" src="img/book/6.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">আগুনের দিন শেষ হয় নি - কিশোর পাশা ইমন</h4>
+	  <p class="card-text">Rating: 5/5</p>
+      <p class="card-text">পাকিস্তানের বিখ্যাত চলচ্চিত্রকার এবং পূর্ব পাকিস্তানের জনপ্রিয় ঔপন্যাসিক জহির রায়হান। বাঙালি জাতির পরিচয় তছনছ করে দেওয়া সেই রাতের পর পথে নামলেন তিনি।</p>
+      <a href="http://bit.ly/2iOTHjf" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+    </div>
+  </div>
+
+</div>
+</div>
+
+
 
 <div id="music" class="container">
     <div class="card">
