--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="card-body">
       <h4 class="card-title">Painting</h4>
       <p class="card-text">একটা ছবি হাজার টা শব্দের সমান। কবে যে সেই মিনিংফুল ছবিটা আঁকতে পারবো জানিনা।</p>
-      <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
+     <!--  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p> -->
     </div>
   </div>
   <div class="card">
@@ -132,16 +132,16 @@
     <div class="card-body">
       <h4 class="card-title">Traveling</h4>
       <p class="card-text">ঘোরাঘুরি খুবই ভালো লাগে।</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
+<!--       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+ -->    </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="img/book.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Reading</h4>
       <p class="card-text">বই নিজের জন্যই পড়ি। পড়তে ভালো লাগে ভালো যেকোনো বই।</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
+<!--       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+ -->    </div>
   </div>
 </div>
 </div>
@@ -168,7 +168,7 @@
       <h4 class="card-title">সাক্ষী ছিলো শিরস্ত্রাণ - Shuhan Rizwan</h4>
       <p class="card-text">স্বাধীনতা যুদ্ধের অত্যন্ত গুরুত্বপূর্ণ একটা সময় অর্থাৎ ১৯৭১ সালের ২৫ শে মার্চের পরে রাজনৈতিকভাবে বাংলাদেশকে যারা নেতৃত্ব দিয়েছেন তার মধ্যে অন্যতম একজন ছিলেন তাজউদ্দীন আহমদ।</p>
       <a href="http://bit.ly/2Ab4ICL" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	  <p class="card-text"><small class="text-muted">Last updated December 23, 2017</small></p>
     </div>
   </div>
   
@@ -177,8 +177,8 @@
     <div class="card-body">
       <h4 class="card-title">হাজার চুরাশির মা - Mahasweta Devi</h4>
       <p class="card-text">নকশাল আন্দোলন হচ্ছে ১৯৭০ দশকের পশ্চিমবঙ্গের একটি কমিউনিস্ট আন্দোলনের নাম। সমাজ ব্যবস্থা ভেঙ্গে ধনী আরও ধনী হচ্ছিলো, গরীব আরও গরিবতর।</p>
-      <a href="http://bit.ly/2Ab4ICL" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <a href="https://www.goodreads.com/review/show/1743088981?book_show_action=false&from_review_page=1" target="_new" >বিস্তারিত পড়ুন</a>
+	  <p class="card-text"><small class="text-muted">Last updated December 23, 2017</small></p>
     </div>
   </div>
   
@@ -189,7 +189,7 @@
       <p class="card-text">তারা খয়েরি রঙের এক ধরনের জামা পরে, বিভিন্ন উৎসবের দিন ফানুস উড়ায়। এই তো, বৌদ্ধ ধর্ম সম্পর্কে জ্ঞান আমার টুকটাক এটুকুই ছিল। এই ধর্মটা সম্পর্কে কখনো জানতে ইচ্ছা হয়নি আর বাংলায় তেমন ভালো বইও ছিল না। তো একদিন হঠাৎ জানতে পারলাম এই বইটার সম্পর্কে।
 </p>
       <a href="http://bit.ly/2iOTHjf" target="_new" >বিস্তারিত পড়ুন</a>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	  <p class="card-text"><small class="text-muted">Last updated December 23, 2017</small></p>
     </div>
   </div>
 
@@ -238,7 +238,7 @@
       <h4 class="card-title">আগুনের দিন শেষ হয় নি - কিশোর পাশা ইমন</h4>
 	  <p class="card-text">Rating: 5/5</p>
       <p class="card-text">পাকিস্তানের বিখ্যাত চলচ্চিত্রকার এবং পূর্ব পাকিস্তানের জনপ্রিয় ঔপন্যাসিক জহির রায়হান। বাঙালি জাতির পরিচয় তছনছ করে দেওয়া সেই রাতের পর পথে নামলেন তিনি।</p>
-      <a href="http://bit.ly/2iOTHjf" target="_new" >বিস্তারিত পড়ুন</a>
+      <a href="https://www.goodreads.com/review/show/1840752758?book_show_action=false&from_review_page=1" target="_new" >বিস্তারিত পড়ুন</a>
 	  <p class="card-text"><small class="text-muted">Last updated November,2017</small></p>
     </div>
   </div>
@@ -304,7 +304,7 @@
     <p class="card-text">কেয়ার টেকার পূরণ জয় তনচংজ্ঞা-০১৫৫২৮৬০৭৬২"</p>
     <p class="card-text">ছবি : ইন্টারনেট</p>
 	
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <p class="card-text"><small class="text-muted">Last updated December 23, 2017</small></p>
   </div>
 </div>
 
