--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
  
   <div class="container">
   <footer style="background-color:#343a40">
-  <p> <font color="white">&#169; Copyright 2018 | Taib Islam Dipu All Rights Reserved</font>
+  <p> <font color="white">&#169; Copyright 2018 | Taib Islam Dipu. All Rights Reserved.</font>
   </p>
 	
 </footer>
