--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
 	  
 <!-- footer start-->
  
-  <div class="container">
-  <footer style="background-color:#343a40">
-  <p> <font color="white">&#169; Copyright 2018 | Taib Islam Dipu. All Rights Reserved.</font>
-  </p>
-	
-</footer>
-</div>
+   <div class="container">
+   
+	<footer style="background-color:#343a40">
+	<p> <font color="white">&#169; Copyright 2018 | <a href="https://www.facebook.com/meTaibIslamDipu" target="mew">Taib Islam Dipu.<a/> All Rights Reserved.</font></p>
+	</footer>
+		
+	</div>
 
 <!-- footer end -->
 	
