--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/cover1.jpg" alt="First slide">
+      <img class="d-block w-100" height="650" src="img/cover1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/cover2.jpg" alt="Second slide">
+      <img class="d-block w-100" height="650" src="img/cover2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/cover3.jpg" alt="Third slide">
+      <img class="d-block w-100" height="650" src="img/cover3.jpg" alt="Third slide">
     </div>
 	<div class="carousel-item">
-      <img class="d-block w-100" src="img/cover4.jpg" alt="Fourth slide">
+      <img class="d-block w-100" height="650" src="img/cover4.jpg" alt="Fourth slide">
     </div>
 	<div class="carousel-item">
-      <img class="d-block w-100" src="img/cover5.jpg" alt="Fifth slide">
+      <img class="d-block w-100" height="650" src="img/cover5.jpg" alt="Fifth slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
